--- a/css/style.css
+++ b/css/style.css
@@ -202,6 +202,149 @@ filter: alpha(opacity=60) #fff;
 #toggle {
 	display: none;
 }
+.contact-log-wrap{
+	background-image: url(../images/cover.png);
+	display: flex;
+	justify-content: space-between;
+	line-height: 1.5;
+	color:#000;
+	padding: 55px 0 65px 0;
+	margin: 50px 0 65px 0;
+}
+.contact-info {
+	width: 50%;
+	padding: 0 65px 0 80px;
+	
+}
+
+.contact-log-wrap h2 {
+	font-size: 30px;
+	    font-weight: normal;
+	    padding-bottom: 
+}
+.contact-info p:nth-child(4) {
+	padding-bottom: 40px;
+	
+}
+.contact-info p:nth-child(2) {
+	padding-top: 40px;
+	
+}
+.register-wrap {
+	width: 50%;
+	padding: 0 80px 0 90px;
+}
+.register-wrap p {
+	padding: 45px 0 35px 0;
+}
+.datetime-wrap{
+	width: 100%;
+}
+
+.register-wrap input {
+	width: 46%;
+	padding: 15px 0 15px 15px;
+	border: 2px solid #000;
+	
+	margin-bottom: 20px;
+
+}
+#date {
+	margin-right: 20px;
+}
+#yourname {
+	margin-right: 20px;
+}
+.contact-info button {
+	margin-top: 55px;
+    margin-right: 20px;
+	width: 40%;
+	padding: 17px 0;
+	color: #fff;
+	background:#000;
+}
+
+.register-wrap button {
+	width: 100%;
+	padding: 17px 0;
+	color: #fff;
+	background:#000;
+}
+.footer {
+	background-image: url(../images/footer.png);
+	color: #fff;
+	line-height: 1.5;
+}
+.footer-wrap {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	padding: 65px 0;
+}
+.animate1:hover {
+	content: '';
+	background-image: url(../images/v2.png);
+}
+.vk { 
+background: url(../images/v.png) no-repeat 50% 27%;  
+
+
+}
+
+.vk:hover { 
+background: url(../images/v2.png) no-repeat 50% 27%;
+}
+.fb { 
+background: url(../images/f.png) no-repeat 50% 27%;  
+
+
+}
+
+.fb:hover { 
+background: url(../images/f2.png) no-repeat 50% 27%;
+
+
+}
+.inst { 
+background: url(../images/inst.png) no-repeat 50% 27%;  
+
+
+}
+
+.inst:hover { 
+background: url(../images/inst2.png) no-repeat 50% 27%;
+
+
+}
+.icons p{
+	width: 43px;
+	height: 43px;
+	background-color: #000;
+	
+
+}
+.icons p:hover {
+	background-color: #fff;
+}
+.icons {
+	display: flex;
+	justify-content: space-between;
+	flex-direction: row;
+	
+}
+.developers p {
+	padding-bottom: 25px;
+	text-align: center;
+}
+.developers span {
+	padding: 15px 30px;
+	
+	background: #000;
+}
+.developers span:hover {
+	background:#fff;
+	color: #000;
+}
 
 @media only screen and (max-width: 760px) {
 .container	label {
@@ -247,16 +390,20 @@ width: 560px;
 	display: none;
 }
 .main .info-wrap {
-	display: block;
+	display: inline-block;
+    max-width: 100%;
+    height: auto;
+    overflow: hidden;
+    padding: 0;
+    margin: 0;
+}
+.info-wrap .left-text {
 	width: 100%;
 }
-.left-text {
-	width: 100%;
+.info-wrap .middle-text {
+	width: 100%
 }
-.middle-text {
-	width: 100%;
-}
-.right-text {
+.info-wrap .right-text {
 	width: 100%;
 }
 .header .enter {
@@ -265,5 +412,37 @@ width: 560px;
 #toggle:checked + .navigation {
 	display: block;
 }
+.contact-log-wrap{
+	
+	display: flex;
+	justify-content: space-between;
+	flex-direction: column;
+	text-align: center;
+}
+.contact-info {
+	width: 100%;
+	
+	
+}
+.register-wrap {
+	width: 100%;
+	margin-top: 20px;
+
+	
+}
+
+.footer-wrap {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	flex-direction: column;
+	text-align: center;
+}
+.socials {
+	margin: 15px 0;
+}
+
+
+
 }
 
