--- a/css/style.css
+++ b/css/style.css
@@ -160,7 +160,9 @@ body{
 	left: 0;
 	
 }
-
+.navigation {
+	position: relative;
+}
 .navigation li:hover {
 	background: rgba(255,255,255,.1);
 }
@@ -270,6 +272,10 @@ filter: alpha(opacity=60) #fff;
 	color: #fff;
 	background:#000;
 }
+button:focus {
+	background: #663d15;
+	outline:none;
+}
 .footer {
 	background-image: url(../images/footer.png);
 	color: #fff;
@@ -345,6 +351,186 @@ background: url(../images/inst2.png) no-repeat 50% 27%;
 	background:#fff;
 	color: #000;
 }
+.popup-wrapper {
+	position: fixed;
+	width: 100%;
+	height:100%;
+	left:0;
+	top:0;
+	background: rgba(0,0,0,.5);
+	z-index: 100;
+	display: none;
+	
+}
+
+.popup {
+	width: 100%;
+	max-width: 460px;
+	background: #fff;
+	padding: 45px 80px 60px;
+	background-image: url(../images/cover.png);
+	position: relative;
+}
+.popup h2 {
+	font-size: 30px;
+	color: #000;
+	font-weight: normal;
+}
+.popup p {
+	color: #000;
+	padding: 30px 0;
+	font-size: 14px;
+	text-transform: uppercase;
+	line-height: 24px;
+}
+.popup-inner {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	overflow-y: auto;
+	width: 100%;
+	height: 100%;
+	position: absolute;;
+	top:0;
+	left:0;
+
+}
+#logins {
+	margin-top: 55px;
+    margin-right: 20px;
+	width: 40%;
+	padding: 17px 0;
+	color: #fff;
+	background:#000;
+}
+.popup input {
+	display: block;
+	width: 100%;
+	padding: 15px 40px 15px 15px;
+	border: 2px solid #000;
+	
+	margin-bottom: 20px;
+	
+}
+.mobile-menu {
+	width: 40px;
+	height: 2px;
+	background:#fff;
+	position: relative;
+	cursor: pointer;
+	margin-left: 20px;
+	display: none;
+}
+.mobile-menu:before {
+	content: '';
+	position: absolute;
+	left: 0;
+	bottom:100%;
+	width: 100%;
+	border-top: 2px solid #fff;
+	padding-bottom: 6px;
+}
+.mobile-menu:after {
+	content: '';
+	position: absolute;
+	left: 0;
+	top:100%;
+	width: 100%;
+	border-bottom: 2px solid #fff;
+	padding-top: 6px;
+}
+
+.login-field:after,
+.pass-field:after {
+	content: '';
+	width: 17px;
+	height: 17px;
+	
+	position: absolute;
+	top:50%;
+	right: 13px;
+	transform: translateY(-50%);
+	
+	background-size: 100%;
+	background-repeat: no-repeat;
+	background-position: 50%;
+}
+
+.login-field:after {
+	background-image: url(../images/loginico.png);
+}
+
+.pass-field:after {
+	background-image: url(../images/passico.png);
+}
+.forgot {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+.forgot  input {
+	display: inline-block;
+}
+
+input[type=checkbox] {
+	width: 0;
+	height: 0;
+	opacity: 0;
+	position: absolute;
+}
+
+input[type=checkbox] + label {
+	text-transform: uppercase;
+	font-weight: 600;
+	padding-left: 33px;
+	position: relative;
+	cursor: pointer;
+
+
+}
+input[type=checkbox] + label:before {
+	content: '';
+	width: 20px;
+	height: 20px;
+	border: 2px solid #000;
+	position: absolute;
+	left: 0;
+	top:-3px;
+
+}
+input[type=checkbox]:checked + label:before {
+	background-image: url("../images/cross.png") no-repeat 50%;
+	background-size: 12px;
+}
+.forgot div + div {
+	text-align: right;
+}
+
+input {
+	outline:none;
+}
+input:focus {
+	border: 2px solid #663d15;
+
+}
+.forgot a {
+	text-transform: uppercase;
+	text-decoration: underline;
+	color: #000;
+	font-weight: 600;
+}
+
+.close {
+	width: 21px;
+	height: 21px;
+	position: absolute;
+	right: 5px;
+	top:5px;
+	background: url("../images/maincross.jpg") no-repeat 50%;
+	background-size: cover;
+	cursor: pointer;
+}
+
 
 @media only screen and (max-width: 760px) {
 .container	label {
@@ -445,4 +631,28 @@ width: 560px;
 
 
 }
+@media only screen and (max-width: 480px) {
+.popup {
+	max-width: 96%;
+	padding: 45px 20px;
+	max-height: 96%;
 
+}
+}
+@media only screen and (max-width: 900px) {
+.mobile-menu {
+	display: block;
+
+}
+.navigation > ul {
+	display: block;
+	position: absolute;
+	top:100%;
+	width: 300px;
+	left:-500px;
+	transition: 0.4s;
+}
+.navigation > ul.active {
+
+}
+}
