--- a/css/style.css
+++ b/css/style.css
@@ -23,12 +23,16 @@ body{
 	font: 14px/1 'pt_sans_narrowbold', Tahoma, Arial, sans-serif;
 	color: #6e6e6e;
 	background: #d0d0d0;
+	
+}
+.home {
 	background: url(../images/background.png);
 }
 .wrapper {
 	position: relative;
 	padding-top: 72px;
 	background:url(../images/shadow.png);
+	overflow: hidden;
 
 }
 .container{
@@ -39,7 +43,7 @@ body{
 .header {
 	max-width: 1200px;
 	width: 100%;
-	background: #000;
+	z-index: 4;
 	position: fixed;
 	top:0;
 	left:50%;
@@ -57,7 +61,7 @@ body{
 
 }
 
-.container a{
+.header a{
 	display: block;
 	padding: 30px 0;
 	position: relative;
@@ -72,7 +76,49 @@ body{
 
 
 }
+.title-shop h2 {
+	padding-top:60px;
 
+}
+.title-shop30 {
+	font-size: 30px;
+	color: #000;
+	font-weight: normal;
+
+}
+.breadcrumb {
+	width: 155px;
+	display: flex;
+	justify-content: space-between;
+	padding: 30px 0 65px 0;
+	align-items: center;
+}
+.breadcrumb a {
+	text-decoration: none;
+	text-transform: uppercase;
+	color: #000;
+}
+.shape16 {
+	
+	display:inline-block;
+	width:10px;
+	height:10px;
+	background-color:#000;
+	transform:rotate(45deg);
+	position: absolute;
+    right: -23px;
+    top: 1px;
+}
+
+.icons a{
+	display: block;
+	padding: 30px 0;
+	position: relative;
+	color:#fff;
+	text-transform: uppercase;
+	font-size: 16px;
+	text-decoration: none;
+} 
 .navigation li {
 	padding: 0 21px;
 }
@@ -94,7 +140,10 @@ body{
     background-size: contain;
 
 }*/
-
+body:not(.home) .navigation {
+	margin: 0 -9999px;
+	padding: 0 9999px;
+}
 .baner {
 	height: 204px;
 	width: 368px;
@@ -140,6 +189,14 @@ body{
 	width: 33%;
 	padding: 0 8px 0 22.5px;
 }
+.main-content {
+	min-height: 60vh;
+}
+.shop-store {
+min-height: 60vh;
+	background:url(../images/bockground-shop.png);
+}
+
 .shape15 {
 	margin-top: 25px;
 	margin-bottom: 35px;
@@ -160,6 +217,11 @@ body{
 }
 .navigation {
 	position: relative;
+	background: #000;
+	width: 100%;
+	white-space: nowrap;
+	display: flex;
+	justify-content: space-between;
 }
 .navigation li:hover,
 .navigation li:focus,
@@ -171,6 +233,7 @@ body{
 
 .login {
 	padding-left: 20px;
+	   margin-left: 75px;
 }
 .login>a{
 	padding-left: 32px;
@@ -217,14 +280,7 @@ filter: alpha(opacity=60) #fff;
 
 }
 
-.container label{
-	font-size: 40px;
-	line-height: 2;
-	position: absolute;
-	left:90px;
-	top:10px; 
-	display: none;
-}
+
 #toggle {
 	display: none;
 }
@@ -259,8 +315,17 @@ filter: alpha(opacity=60) #fff;
 	border: 7px solid #fff;
 
 }
+
 .photo-buttons button {
 
+	width: 48%;
+	padding: 17px 0;
+	color: #fff;
+	background:#000;
+	cursor: pointer;
+	text-transform: uppercase;
+}
+.btn {
 	width: 48%;
 	padding: 17px 0;
 	color: #fff;
@@ -519,6 +584,7 @@ background: url(../images/inst2.png) no-repeat 50% 27%;
 	cursor: pointer;
 	margin-left: 20px;
 	display: none;
+	margin-top: 20px;
 }
 .mobile-menu:before {
 	content: '';
@@ -617,6 +683,184 @@ input[type=checkbox]:checked + label:before{
 	background: url("../images/cross.png") no-repeat 50%;
 	background-size: 15px;
 }
+.checkbox-1 input[type=checkbox] + label{
+	display: inline-block;
+	margin:0 auto;
+	
+}
+.manufacturers {
+	color:#000;
+}
+.checkbox-manuf {
+	height: 235px;
+	display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    padding-top: 25px;
+}
+.photo-price {
+	width: 74%;
+	justify-content: space-between;
+}
+.Baxter-wrapper{
+	width:32%;
+	background:#fff;
+
+}
+.shop-span {
+	padding: 1px 10px;
+	margin-top: 35px;
+}
+.upper-p {
+	text-transform: uppercase;
+	color:#000;
+}
+.flex {
+	display: flex;
+}
+.radio-manuf {
+	height: 285px;
+    display: flex;
+    justify-content: space-between;
+}
+.Accessories-wrap {
+	    height: 125px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+
+}
+.Accessories2{
+  display: block;
+  position: relative;
+
+  cursor: pointer;
+
+padding-left: 41px;
+    padding-top: 3px;
+
+  user-select: none;
+}
+.Accessories2 input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+}
+.checkmark {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 20px;
+  width: 20px;
+  background-color: #fff;
+  border-radius: 50%;
+  border: 2px solid #000;
+  }
+  .Accessories2 input:checked ~ .checkmark {
+  background-color: #FFF;
+}
+.checkmark:after {
+  content: "";
+  position: absolute;
+  display: none;
+  
+}
+.shadow {
+     
+    box-shadow: 0 0 10px rgba(0,0,0,0.5); 
+    
+   }
+ 
+ .scroll-pages a:hover,
+ .scroll-pages a:focus {
+ 	background:#fff;
+ 	color: #000;
+ }
+ .scroll-pages {
+ 	padding: 45px 0 50px 270px;
+ 	
+ }
+ .scroll-pages a{
+text-decoration: none;
+color: #fff;
+padding: 13px 19px;
+   	background: #000;
+
+
+ }
+.squere {
+	padding-right: 7px;
+}
+.Accessories2 input:checked ~ .checkmark:after {
+  display: block;
+}
+.Accessories2 .checkmark:after {
+ 	top: 4px;
+	left: 4px;
+	width: 8px;
+	height: 8px;
+	border-radius: 50%;
+	background: #000;
+}
+.Accessories-side {
+	padding-top: 20px;
+}
+
+.price-button {
+	width: 100%;
+    padding: 17px 0;
+    
+    background: #e5e5e5;
+    cursor: pointer;
+    text-transform: uppercase;
+        text-align: center;
+}
+.photo-price form {
+	    width: 65%;
+}
+.Baxter-wrapper img {
+	width: 100%;
+}
+.Baxter-name {
+	padding: 15px 0 0 15px;
+}
+.Baxter-button{
+	justify-content: space-between;
+	position: relative;
+	padding: 15px 15px;
+}
+.Baxter-button input {
+    width: 100%;
+    padding: 17px 0;
+    color: #fff;
+    background: #000;
+    cursor: pointer;
+    text-transform: uppercase;
+    }
+	
+
+.Baxter-button input:hover,
+.Baxter-button input:focus {
+	background: #663d15;
+	outline:none;
+}
+.checkbox-manuf label:hover {
+	color: #663d15;
+}
+.Accessories-wrap label:hover {
+	color: #663d15;
+}
+/*.container label{
+	font-size: 40px;
+	line-height: 2;
+	position: absolute;
+	left:90px;
+	top:10px; 
+	display: none;
+}*/
+.manufacturers-aside {
+	width: 30%;
+}
 .popup label:hover {
 	color: #663d15;
 }
@@ -702,6 +946,9 @@ input:focus {
 	outline:0;
   border: 2px solid #663d15;
 }
+.breadcrumb li:nth-child(1) {
+	position: relative;
+}
 @media only screen and (max-width: 900px) {
 .mobile-menu {
 	display: block;
@@ -730,6 +977,10 @@ left: 0;
     margin-right: 10px;
     width: 43%;
     }
+.login {
+    padding-left: 20px;
+    margin-left: 675px;
+}
 @media only screen and (max-width: 760px) {
 	.mobile-menu {
    
@@ -762,9 +1013,12 @@ left: 0;
 .navigation > ul.active {
 left: 0;
 }
-
-.active {
-	display: block;
+.navigation {
+	position: static;
+}
+.mobile-menu { 
+	position: absolute;
+	    margin-top: 38px;
 }
 
 .header {
@@ -860,11 +1114,89 @@ left: 0;
     margin-right: 10px;
     width: 46%;
 }
-
-
+.breadcrumb {
+    
+    margin: 0 auto;
+}
+.title-shop {
+	text-align: center;
+}
+.manufacturers {
+	    flex-wrap: wrap; 
+    justify-content: center;
+    width: 100%;
+}
+.photo-price {
+    width: 100%;
+}
+.radio-manuf {
+    height: 100%;
+}
+.checkbox-manuf {
+    text-align: center;
+}
+.manufacturers-aside {
+    width: 37%;
+    margin-bottom: 15px;
+}
+.scroll-pages {
+    padding: 45px 0 50px 0;
+    justify-content: center;
+}
+.wrapper {
+    
+    padding-top: 63px;
+}
+.login>a {
+   
+    position: absolute;
+    right: 0;
+    top: 0;
+}
+.mobile-menu {
+    position: absolute;
+    
+    top: 0;
+    }
+.header {
+    position: absolute;
+    top: 0;
+    background: #000;
+    padding-bottom: 17px;
+}
+.socials {
+    width: 20%;
+}
+.manuf2 {
+	    width: 49%;
+    
+    display: flex;
+    flex-direction: column;
+    
+    align-items: center;
+}
 @media only screen and (max-width: 480px) {
 .popup {
 	max-width: 96%;
 	padding: 45px 20px;
 	
+}
+.photo-price {
+	    flex-wrap: wrap;
+	    justify-content: center;
+}
+.Baxter-wrapper {
+    width: 45%;
+    background: #fff;
+    margin-right: 10px;
+    margin-top: 5px;
+}
+.manufacturers-aside {
+    width: 58%;
+}
+.socials {
+    width: 35%;
+}
+.manuf2 {
+    width: 100%;
 }
