--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,12 @@
 @font-face {
-    font-family: 'pt_sans_narrowbold';
-    src: url('../fonts/pt_sans_narrow_bold-webfont.eot');
-    src: url('../fonts/pt_sans_narrow_bold-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/pt_sans_narrow_bold-webfont.woff2') format('woff2'),
-         url('../fonts/pt_sans_narrow_bold-webfont.woff') format('woff'),
-         url('../fonts/pt_sans_narrow_bold-webfont.svg#pt_sans_narrowbold') format('svg');
-    font-weight: normal;
+    font-family: 'PT Sans Narrow';
+    src: url('../fonts/PTSans-NarrowBold.eot');
+    src: url('../fonts/PTSans-NarrowBold.eot?#iefix') format('embedded-opentype'),
+        url('../fonts/PTSans-NarrowBold.woff2') format('woff2'),
+        url('../fonts/PTSans-NarrowBold.woff') format('woff'),
+        url('../fonts/PTSans-NarrowBold.svg#PTSans-NarrowBold') format('svg');
+    font-weight: bold;
     font-style: normal;
-
 }
 ul{
 	list-style: none;
@@ -86,12 +85,60 @@ body{
 	font-weight: normal;
 
 }
-.breadcrumb {
+.widthbutt {
+	width: 50%;
+	padding: 40px 0;
+}
+.widthbread {
 	width: 155px;
+	padding-top: 30px;
+}
+.widthprod {
+	width: 345px;
+	padding: 60px 0 40px 0;
+}
+.gotinside {
 	display: flex;
 	justify-content: space-between;
-	padding: 30px 0 65px 0;
+}
+.text-bottomshop {
+	line-height: 1.5;
+}
+.text-bottomshop h3 {
+	padding-bottom: 40px;
+	font-size: 24px;
+	font-weight: normal;
+}
+.breadcrumb {
+	
+	display: flex;
+	justify-content: space-between;
 	align-items: center;
+	
+}
+.text-bottomshop li {
+	position: relative;
+	padding-left: 20px;
+}
+.shape18 {
+    display: inline-block;
+    width: 8px;
+    height: 8px;
+    background-color: #000;
+    transform: rotate(45deg);
+    position: absolute;
+    /* right: -23px; */
+    top: 6px;
+    left: 3px;
+}
+.text-middleshop {
+	padding: 40px 0 70px 0;
+	line-height: 1.5;
+}
+.text-rightshop {
+	color: #000;
+	text-transform: uppercase;
+
 }
 .breadcrumb a {
 	text-decoration: none;
@@ -101,15 +148,31 @@ body{
 .shape16 {
 	
 	display:inline-block;
-	width:10px;
-	height:10px;
+	width:8px;
+	height:8px;
 	background-color:#000;
 	transform:rotate(45deg);
 	position: absolute;
     right: -23px;
-    top: 1px;
+    top: 2px;
 }
-
+.shape17 {
+	
+	display:inline-block;
+	width:8px;
+	height:8px;
+	background-color:#000;
+	transform:rotate(45deg);
+	position: absolute;
+    right: -23px;
+    top: 2px;
+}
+.breadcrumb li:nth-child(2) {
+	position: relative;
+}
+.gotinside span {
+	color: #aeaeae;
+}
 .icons a{
 	display: block;
 	padding: 30px 0;
@@ -402,7 +465,7 @@ filter: alpha(opacity=60) #fff;
 }
 
 .register-wrap input {
-	width: 46%;
+	width: 45%;
 	padding: 15px 0 15px 15px;
 	border: 2px solid #000;
 	
@@ -688,6 +751,71 @@ input[type=checkbox]:checked + label:before{
 	margin:0 auto;
 	
 }
+.marginmanuf {
+    
+    margin-top: 65px;
+}
+.swiper-wrapper img {
+	width: 100%;
+}
+.gallery-product-wrap {
+margin:0 0 10px;
+padding: 0 10px;
+}
+.gallery-product{
+	width: 100%;
+	height: 500px;
+	background: #fff;
+	box-shadow: 0 0 10px rgba(0,0,0,0.5);
+	padding: 10px;
+}
+.gallery-product .swiper-slide,
+.gallery-thumbs .swiper-slide {
+	position: relative;
+	height: 100%;
+	background: #fff;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+.gallery-thumbs {
+	height: 170px;
+	    margin-bottom: 85px;
+}
+.gallery-thumbs .swiper-slide {
+	background:none;
+	padding: 10px;
+}
+.two-columns {
+	display: flex;
+	align-items: stretch;
+}
+.gallery-thumbs .slide-inner {
+	box-shadow: 0 0 10px rgba(0,0,0,0.5);
+	background: #fff;
+	overflow: hidden;
+}
+.col-half {
+	width: 50%;
+	
+}
+.product-data h1 {
+	margin:0 0 25px;
+	text-transform: uppercase;
+}
+.product-data h3 {
+	font-size: 24px;
+	text-transform: uppercase;
+
+}
+.col-half + .col-half {
+	padding-right: 0;
+	padding-left: 80px;
+	width: 50%;
+}
+.product-gallary {
+	margin-left: -10px;
+}
 .manufacturers {
 	color:#000;
 	    flex-wrap: wrap;
@@ -755,6 +883,14 @@ padding-left: 41px;
     line-height: 1;
     
 
+}
+.slide-inner {
+	height: 100%;
+	background: #fff;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 .buy-button a{
 	text-decoration: none;
@@ -837,7 +973,7 @@ color: #fff;
 .price-button {
 	width: 100%;
     padding: 17px 0;
-    
+    color: #000;
     background: #e5e5e5;
     cursor: pointer;
     text-transform: uppercase;
@@ -855,8 +991,10 @@ color: #fff;
 .Baxter-button{
 	justify-content: space-between;
 	position: relative;
-	padding: 15px 15px;
 
+}
+.paddshop {	
+	padding: 15px 15px;
 }
 .Baxter-button input {
     width: 100%;
@@ -1011,13 +1149,72 @@ left: 0;
     padding-left: 20px;
     margin-left: 675px;
 }
+.text-bottomshop {
+    line-height: 1.5;
+    margin-bottom: 20px;
+
+ }
+ .navigation > ul{
+		position: absolute;
+		display: block;
+		top: 100%;
+		width: 300px;
+		background: #000;
+		left: -500px;
+		transition: 0.4s;
+		max-height: calc(100vh - 52px);
+		height: 100vh;
+		overflow-y: auto;
+}
+.navigation > ul.active {
+left: 0;
+}
+.navigation {
+	position: static;
+}
+.mobile-menu { 
+	position: absolute;
+	    margin-top: 38px;
+}
 @media only screen and (max-width: 760px) {
 	.mobile-menu {
    
     margin-bottom: 13px;
 }
 
+.col-half + .col-half {
+    padding-right: 0;
+    padding-left: 10px;
+    width: 50%;
+    text-align: center;
+}
+.gallery-product {
+    
+    height: 400px;
+    }
 
+.Baxter-button {
+    
+    margin: 0 auto;
+    width: 70%;
+}
+.text-middleshop {
+    padding: 30px 0 20px 0;
+}
+.text-bottomshop {
+    line-height: 1.5;
+    margin-bottom: 20px;
+
+ }
+.gallery-product-wrap {
+    margin: 0 0 10px;
+    padding: 20px 10px;
+    overflow: hidden;
+}
+.text-bottomshop h3 {
+    padding-bottom: 20px;
+
+ }
 .container	label {
 	display: block;
 	cursor: pointer;
@@ -1207,6 +1404,19 @@ left: 0;
     align-items: center;
 }
 @media only screen and (max-width: 480px) {
+	.two-columns {
+    display: flex;
+    align-items: stretch;
+    flex-direction: column;
+}
+.col-half + .col-half {
+    
+    width: 100%;
+    text-align: center;
+}
+.col-half {
+    width: 100%;
+}
 .popup {
 	max-width: 96%;
 	padding: 45px 20px;
