--- a/css/style.css
+++ b/css/style.css
@@ -767,7 +767,7 @@ padding: 0 10px;
 	height: 500px;
 	background: #fff;
 	box-shadow: 0 0 10px rgba(0,0,0,0.5);
-	padding: 10px;
+	padding: 5px;
 }
 .gallery-product .swiper-slide,
 .gallery-thumbs .swiper-slide {
@@ -954,6 +954,102 @@ color: #fff;
     align-items: center;
 
 
+ }
+ .title48 span {
+ 	position: relative;
+ 	display: inline-block;
+ 	background: url(../images/bockground-shop.png);
+ 	padding: 0 25px;
+ 	z-index: 3;
+ }
+ .title48:before {
+ 	content: '';
+ 	width: 100%;
+ 	height: 2px;
+ 	position: absolute;
+ 	margin-top: -1px;
+ 	left: 0;
+ 	top:50%;
+ 	background:#000;
+ 	z-index: 1;
+ }
+ .title48 {
+ 	text-transform: uppercase;
+ 	font-size: 48px;
+ 	text-align: center;
+ 	position: relative;
+ 	color: #000;
+ 	margin-top: 60px;
+ 	padding: 0 20px;
+ 	margin-bottom: 70px;
+ }
+ .contacts {
+ 	display: flex;
+ 	align-items: center;
+ 	justify-content: center;
+ }
+ .map iframe {
+ 	width: 100%;
+ }
+ .invisible {
+ 	opacity: 0;
+ }
+ .col-half h4 {
+ 	    padding-bottom: 40px;
+    font-size: 24px;
+    font-weight: normal;
+    color: #000;
+        width: 68%;
+}
+ .price-page .row {
+ 	margin-top: 65px;
+ 	text-transform: uppercase;
+ 	color: #000;
+ 	line-height: 24px;
+ 	margin-bottom: 75px;
+ 	
+ }
+ .price-page .col-half {
+ 	padding-right: 40px;
+ }
+ .price-page .col-half + .col-half {
+ 		padding-right: 0;
+ 		padding-left: 40px;
+ 
+ }
+ .table {
+ 	border-collapse: collapse;
+ 	width: 100%;
+ 	color: #000;
+
+ }
+ .price-page .table td:last-child {
+ 	text-align: center;
+ }
+ .table td {
+ 	border:2px solid #000;
+ 	padding:12px 15px;
+ 	vertical-align: middle;
+ 	width: 50%;
+ 	text-transform: uppercase;
+ }
+ .marked-list li {
+ 	    position: relative;
+    padding-left: 20px;
+    color: #000;
+    padding-bottom: 23px;
+    text-transform: uppercase;
+ }
+.price-page .col-half {
+	width: 50%;
+}
+ .allbackground {
+ 	background:#fff;
+ }
+ .contacts {
+ 	display: flex;
+ 	align-items: center;
+ 	justify-content: center;
  }
 .squere {
 	padding-right: 7px;
