--- a/css/style.css
+++ b/css/style.css
@@ -38,6 +38,7 @@ body{
 	max-width: 960px;
 	padding: 0 10px;
 	margin: 0 auto;
+	
 }
 .header {
 	max-width: 1200px;
@@ -657,6 +658,73 @@ background: url(../images/inst2.png) no-repeat 50% 27%;
 	width: 100%;
 	border-top: 2px solid #fff;
 	padding-bottom: 6px;
+}
+.reviews-main {
+	color: #000;
+}
+.postid img {
+	float: left;
+}
+.textid span {
+	display: flex;
+    color: #161616;
+    font-family: "Source Sans Pro",sans-serif;
+    font-size: 14px;
+    font-weight: normal;
+    line-height: 1;
+
+}
+.textid {
+	padding-left: 10px;
+}
+.textid p{
+	padding: 10px 8px;
+}
+.lastreview {
+	padding: 0 10px;
+	
+}
+.postbody img {
+	width: 100%;
+}
+.post {
+	padding: 10px 0;
+	width: 25%;
+	background:#fff;
+	margin:10px 5px;
+	border-radius: 7px;
+	box-shadow: 0 0 1px rgba(0,0,0,0.5);
+}
+.post:first-child {
+	margin-left: 0;
+	padding-left: 0;
+}
+.postid {
+	padding: 5px 10px;
+}
+.postid img {
+	margin-right: 7px;
+}
+.lastreview span {
+	    font-weight: 700;
+}
+.widthbreador {
+    width: 151px;
+    padding-top: 30px;
+    margin-bottom: 40px;
+}
+.postid p {
+	
+	    color: #161616;
+    font-family: "Source Sans Pro",sans-serif;
+    font-size: 12px;
+    font-weight: 400;
+   padding: 5px 0 10px 0;
+}
+.reviews {
+	width: 100%;
+	overflow: hidden;
+
 }
 .mobile-menu:after {
 	content: '';
